--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created using React"
     />
     <link rel="apple-touch-icon" href="./logo192.png" />
     <!--
